<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="example.com.db.nimbuzz_banbot_android_by_db.AboutFragment"
    android:background="#84badf">

    <!-- TODO: Update blank fragment layout -->

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/about"
        android:id="@+id/textView14"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:textSize="25sp"
        android:textColor="#4b4848" />

    <ImageView
        android:layout_width="400dp"
        android:layout_height="60dp"
        android:id="@+id/imageView"
        android:visibility="visible"
        android:contentDescription="@string/dbimg"
        android:src="@drawable/dbhere2"
        android:longClickable="false"
        android:layout_gravity="center_horizontal|top"
        android:layout_marginTop="41dp"
        android:layout_below="@+id/textView14"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/aboutbot"
        android:id="@+id/textView15"
        android:layout_marginTop="49dp"
        android:textSize="22sp"
        android:textColor="#2441d0"
        android:textAlignment="center"
        android:layout_below="@+id/imageView"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/botfeatures"
        android:id="@+id/textView16"
        android:layout_below="@+id/textView15"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="41dp"
        android:textSize="22sp"
        android:textColor="#e74e7204" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/botf"
        android:id="@+id/textView17"
        android:layout_below="@+id/textView16"
        android:layout_centerHorizontal="true"
        android:textSize="22sp"
        android:textColor="#feaf04"
        android:textAlignment="center" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/coderdb"
        android:id="@+id/textView18"
        android:layout_marginTop="41dp"
        android:textAlignment="center"
        android:textColor="#f84b4b"
        android:textSize="24sp"
        android:layout_below="@+id/textView17"
        android:layout_centerHorizontal="true" />


</RelativeLayout>
